# server

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.json  permissions.json  todo.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
resources/data/trim_material/: resin.json
resources/registry/: attributes.json  block_properties.json  entities.json  entity_pose.json  items.json  potion.json  potion_recipes.json  status_effects.json
resources/registry/compatibility/: block_aliases.json  item_aliases.json
resources/registry/protocol/: 765.json  766.json  767.json  768.json  769.json
src/: ClientHandleHelper.cpp  ClientHandleHelper.hpp  MultiThreadServer.cpp  block.hpp  calculations.cpp  calculations.hpp  chunk_core.cpp  chunk_core.hpp  container.hpp  entity.cpp  entity.hpp  hitbox.hpp  item.hpp  log.cpp  log.hpp  main.cpp  once_definer.cpp  protocolHelper.cpp  protocolHelper.hpp  protocolHelperNBT.cpp  protocolHelperNBT.hpp  range_walk.hpp  registers.cpp  registers.hpp
src/api/: allowlist.hpp  apis.cpp  asio.cpp  asio.hpp  ban.hpp  block_state_provider.cpp  block_state_provider.hpp  client.hpp  command.hpp  configuration.cpp  configuration.hpp  console.hpp  dialogs.hpp  entity_id_map.cpp  entity_id_map.hpp  kick.hpp  loot_table_pool_entry.cpp  loot_table_pool_entry.hpp  network.cpp  network.hpp  new_packets.cpp  new_packets.hpp  new_packets_decode.cpp  new_packets_encode.cpp  new_packets_stringize.cpp  packets.cpp  packets.hpp  permissions.cpp  permissions.hpp  players.cpp  players.hpp  plugin.hpp  predicate.cpp  predicate.hpp  protocol.hpp  recipe.cpp  recipe.hpp  scoreboard.hpp  server.cpp  server.hpp  (+5 more)
src/api/internal/: block_state_provider.hpp  command.hpp  console.hpp  loot_table_pool_entry.hpp  permissions.hpp  predicate.hpp  recipe.hpp  world.hpp
src/api/mojang/: session_server.cpp  session_server.hpp
src/api/network/: tcp.hpp
src/base_objects/: adaptived_id.hpp  atomic_holder.hpp  block.cpp  block.hpp  block_state_provider.hpp  bounds.hpp  box.hpp  callback.hpp  chat.cpp  chat.hpp  chunk.hpp  commands.cpp  commands.hpp  component.cpp  component.hpp  component_decode.cpp  component_encode.cpp  component_rft.cpp  container.hpp  dye_color.cpp  dye_color.hpp  entity.cpp  entity.hpp  entity_animation.hpp  event.hpp  float16.hpp  float_provider.hpp  hitbox.hpp  id_registry.cpp  id_registry.hpp  item.hpp  loot_table_pool_entry_processor.hpp  mc_version.hpp  number_provider.cpp  number_provider.hpp  packets.cpp  packets.hpp  packets_help.cpp  packets_help.hpp  pallete_container.hpp  (+29 more)
src/base_objects/data_packs/: known_pack.hpp
src/base_objects/encryption/: aes.cpp  aes.hpp
src/base_objects/entity/: animation.hpp  event.hpp
src/base_objects/events/: base_event.hpp  callback.hpp  event.hpp  priority.hpp  simple_event.hpp  sync_event.hpp
src/base_objects/network/: accept_packet_registry.cpp  accept_packet_registry.hpp  response.cpp  response.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp  tcp_session.cpp  tcp_session.hpp
src/base_objects/packets/: effect_flags.hpp  enums.hpp
src/base_objects/world/: block_action.hpp  chunk.hpp  height_maps.hpp  light_data.hpp  loading_point_ticket.hpp  sub_chunk_data.cpp  sub_chunk_data.hpp
src/build_in_plugins/: allowlist.cpp  allowlist.hpp  ban.cpp  ban.hpp  communication_core.cpp  communication_core.hpp  console.cpp  console.hpp  minecraft.cpp  minecraft.hpp  permissions.cpp  permissions.hpp  play_engine.cpp  play_engine.hpp  server.cpp  server.hpp  world.cpp  world.hpp
src/build_in_plugins/base/: communication_core.cpp  license.cpp  minecraft.cpp  play_engine.cpp  server.cpp  world.cpp
src/build_in_plugins/light_processors/: default_proc.cpp  default_proc.hpp
src/build_in_plugins/processors_providers/: block_state_generator.cpp  block_state_provider_generator.cpp  block_state_provider_generator.hpp  loot_table_pool_entry.cpp  loot_table_pool_entry_processor.cpp  loot_table_pool_entry_processor.hpp  predicate.cpp  predicate_processor.cpp  predicate_processor.hpp  recipe.cpp  recipe_processor.cpp  recipe_processor.hpp
src/build_in_plugins/protocol/: configuration.cpp  login.cpp  play_765.cpp  play_766.cpp  play_767.cpp  play_768.cpp  play_769.cpp  shared_encoding_packets.cpp  shared_encoding_packets.hpp
src/build_in_plugins/special/: status.hpp
src/build_in_plugins/tools/: allowlist.cpp  ban.cpp  ban.hpp  commands.cpp  config.cpp  console.cpp  kick.cpp  permissions.cpp  permissions.hpp  protocol.cpp  scheduled.cpp
src/build_in_plugins/world_generators/: default_gen.cpp  default_gen.hpp  standard_gen.cpp
src/core/: load_lokup.hpp
src/mojang/api/: hash.hpp  hash256.hpp  http.hpp  session_server.cpp  session_server.hpp
src/mojang_api/: hash.hpp  http.hpp  session_server.cpp  session_server.hpp
src/plugin/: main.cpp  main.hpp  plugin_defintions.cpp  registration.hpp  special.hpp
src/protocolHelper/: packets.hpp  state_configuration.hpp  state_handshaking.cpp  state_handshaking.hpp  state_login.hpp  state_play.hpp  state_status.cpp  state_status.hpp  util.hpp  utill.cpp
src/protocolHelper/client_handler/: abstract.cpp  abstract.hpp  configuration.cpp  (+5 more)
src/resources/: registers.cpp  registers.hpp
src/storage/: enbt_list_storage.cpp  enbt_list_storage.hpp  list_storage.cpp  list_storage.hpp  permissions_manager.cpp  permissions_manager.hpp  players_data.cpp  players_data.hpp  scoreboard.cpp  scoreboard.hpp  unordered_list_storage.cpp  unordered_list_storage.hpp  world_data.cpp  world_data.hpp
src/util/: calculations.cpp  calculations.hpp  conversions.cpp  conversions.hpp  cts.hpp  json_helpers.cpp  json_helpers.hpp  nbt.cpp  nbt.hpp  readers.hpp  reflect.hpp  reflect_fns.hpp  shared_static_values.hpp  slot.cpp  slot.hpp  slot_reader.cpp  slot_reader.hpp  task_management.hpp  templates.hpp
storage/players/: 50400080-2040-60e0-d060-202040f07070.e_dat  f0c020f0-50d0-6050-a0f0-c050d0d0e070.e_dat
tools/: CmakeLists.txt
tools/binary_embed/: CMakeLists.txt  main.cpp
tools/reflect_map/: CMakeLists.txt  main.cpp  vcpkg.json
(+135 files in other folders)
